--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="/index.html">iGnosis.tech</a>
+        <a class="navbar-brand" href="./index.html">iGnosis.tech</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -28,8 +28,8 @@
         </button>
         <div class="collapse navbar-collapse" id="siteNav">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="/services.html">Services</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="./services.html">Services</a>
+            <a class="nav-link" href="./contact.html">Contact</a>
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
               systematically.
             </p>
             <div class="d-flex flex-wrap gap-3 mt-4 fade-up delay-3">
-              <a class="btn btn-dark btn-lg" href="/contact.html">Schedule an initial call</a>
+              <a class="btn btn-dark btn-lg" href="./contact.html">Schedule an initial call</a>
               <a class="btn btn-ghost btn-lg" href="#method">See the method</a>
             </div>
           </div>
@@ -261,7 +261,7 @@
               </p>
             </div>
             <div class="col-lg-4 text-lg-end">
-              <a class="btn btn-lg" href="/contact.html">Book a call</a>
+              <a class="btn btn-lg" href="./contact.html">Book a call</a>
             </div>
           </div>
         </div>
@@ -272,8 +272,8 @@
       <div class="container d-flex flex-wrap justify-content-between align-items-center gap-3">
         <span>iGnosis.tech</span>
         <div class="d-flex gap-3">
-          <a class="text-decoration-none" href="/services.html">Services</a>
-          <a class="text-decoration-none" href="/contact.html">Contact</a>
+          <a class="text-decoration-none" href="./services.html">Services</a>
+          <a class="text-decoration-none" href="./contact.html">Contact</a>
         </div>
       </div>
     </footer>
