--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="/index.html">iGnosis.tech</a>
+        <a class="navbar-brand" href="./index.html">iGnosis.tech</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -28,9 +28,9 @@
         </button>
         <div class="collapse navbar-collapse" id="siteNav">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link active" aria-current="page" href="/services.html">Services</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="./index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="./services.html">Services</a>
+            <a class="nav-link" href="./contact.html">Contact</a>
           </div>
         </div>
       </div>
@@ -162,7 +162,7 @@
               <p class="lead mb-0">Schedule an initial call to assess valuation improvement potential.</p>
             </div>
             <div class="col-lg-4 text-lg-end">
-              <a class="btn btn-lg" href="/contact.html">Book a call</a>
+              <a class="btn btn-lg" href="./contact.html">Book a call</a>
             </div>
           </div>
         </div>
@@ -173,8 +173,8 @@
       <div class="container d-flex flex-wrap justify-content-between align-items-center gap-3">
         <span>iGnosis.tech</span>
         <div class="d-flex gap-3">
-          <a class="text-decoration-none" href="/index.html">Home</a>
-          <a class="text-decoration-none" href="/contact.html">Contact</a>
+          <a class="text-decoration-none" href="./index.html">Home</a>
+          <a class="text-decoration-none" href="./contact.html">Contact</a>
         </div>
       </div>
     </footer>
